--- a/src/InfoBox.css
+++ b/src/InfoBox.css
@@ -4,4 +4,11 @@
 .CardContainer{
     display: flex;
     justify-content: center;
+     
 }
+ .hello{
+    background-color:cornsilk;    
+ }
+ .col{
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+ }
